# ai

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt
src/ai/linalg/: CMakeLists.txt  matrix.h
src/ai/nn/: activation.cpp  activation.h
src/java/com/amanmehara/ai/nn/activations/: Activation.java  ReLU.java  Sigmoid.java
src/java/com/amanmehara/ai/nn/initializers/: Initializer.java
src/java/com/amanmehara/ai/nn/optimizers/: Optimizer.java
src/java/com/amanmehara/ai/nn/regularizers/: Regularizer.java
test/: CMakeLists.txt
test/ai/linalg/: CMakeLists.txt  matrix_test.cpp
